v2.5.7/_sources/plugins/network_access_global_exception_rules_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.ise.network_access_global_exception_rules_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.ise.network_access_global_exception_rules module -- Resource module for Network Access Global Exception Rules
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.ise collection <https://galaxy.ansible.com/cisco/ise>`_ (version 2.5.7).

    To install it, use: :code:`ansible-galaxy collection install cisco.ise`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.cisco.ise.network_access_global_exception_rules_module_requirements>` for details.

    To use it in a playbook, specify: :code:`cisco.ise.network_access_global_exception_rules`.

.. version_added

.. rst-class:: ansible-version-added

New in cisco.ise 1.0.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Manage operations create, update and delete of the resource Network Access Global Exception Rules.
- Network Access - Create global exception authorization rule.
- Network Access - Delete global exception authorization rule.
- Network Access - Update global exception authorization rule.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

.. _ansible_collections.cisco.ise.network_access_global_exception_rules_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- ciscoisesdk \>= 2.0.5
- python \>= 3.5






.. Options

Parameters
----------


.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-id"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Id path parameter. Rule id.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_debug"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-ise_debug:

      .. rst-class:: ansible-option-title

      **ise_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Identity Services Engine SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_hostname"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-ise_hostname:

      .. rst-class:: ansible-option-title

      **ise_hostname**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_hostname" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_password"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-ise_password:

      .. rst-class:: ansible-option-title

      **ise_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_username"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-ise_username:

      .. rst-class:: ansible-option-title

      **ise_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine username to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_uses_api_gateway"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-ise_uses_api_gateway:

      .. rst-class:: ansible-option-title

      **ise_uses_api_gateway**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_uses_api_gateway" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      :ansible-option-versionadded:`added in cisco.ise 1.1.0`


      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag that informs the SDK whether to use the Identity Services Engine's API Gateway to send requests.

      If it is true, it uses the ISE's API Gateway and sends requests to https://{{ise\_hostname}}.

      If it is false, it sends the requests to https://{{ise\_hostname}}:{{port}}, where the port value depends on the Service used (ERS, Mnt, UI, PxGrid).


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_uses_csrf_token"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-ise_uses_csrf_token:

      .. rst-class:: ansible-option-title

      **ise_uses_csrf_token**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_uses_csrf_token" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      :ansible-option-versionadded:`added in cisco.ise 3.0.0`


      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag that informs the SDK whether we send the CSRF token to ISE's ERS APIs.

      If it is True, the SDK assumes that your ISE CSRF Check is enabled.

      If it is True, it assumes you need the SDK to manage the CSRF token automatically for you.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_verify"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-ise_verify:

      .. rst-class:: ansible-option-title

      **ise_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_version"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-ise_version:

      .. rst-class:: ansible-option-title

      **ise_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Identity Services Engine to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"3.1\_Patch\_1"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_wait_on_rate_limit"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-ise_wait_on_rate_limit:

      .. rst-class:: ansible-option-title

      **ise_wait_on_rate_limit**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_wait_on_rate_limit" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Identity Services Engine SDK to enable automatic rate-limit handling.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-link"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-link:

      .. rst-class:: ansible-option-title

      **link**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-link" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Network Access Global Exception Rules's link.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-link/href"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-link/href:

      .. rst-class:: ansible-option-title

      **href**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-link/href" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Network Access Global Exception Rules's href.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-link/rel"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-link/rel:

      .. rst-class:: ansible-option-title

      **rel**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-link/rel" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Network Access Global Exception Rules's rel.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-link/type"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-link/type:

      .. rst-class:: ansible-option-title

      **type**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-link/type" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Network Access Global Exception Rules's type.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profile"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-profile:

      .. rst-class:: ansible-option-title

      **profile**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profile" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The authorization profile/s.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule:

      .. rst-class:: ansible-option-title

      **rule**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Common attributes in rule authentication/authorization.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition:

      .. rst-class:: ansible-option-title

      **condition**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Network Access Global Exception Rules's condition.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/attributeName"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/attributename:

      .. rst-class:: ansible-option-title

      **attributeName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/attributeName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Dictionary attribute name.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/attributeValue"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/attributevalue:

      .. rst-class:: ansible-option-title

      **attributeValue**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/attributeValue" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      \<ul\>\<li\>Attribute value for condition\</li\> \<li\>Value type is specified in dictionary object\</li\> \<li\>if multiple values allowed is specified in dictionary object\</li\>\</ul\>.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/children"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/children:

      .. rst-class:: ansible-option-title

      **children**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/children" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      In case type is andBlock or orBlock addtional conditions will be aggregated under this logical (OR/AND) condition.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/children/conditionType"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/children/conditiontype:

      .. rst-class:: ansible-option-title

      **conditionType**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/children/conditionType" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      \<ul\>\<li\>Inidicates whether the record is the condition itself(data) or a logical(or,and) aggregation\</li\> \<li\>Data type enum(reference,single) indicates than "conditonId" OR "ConditionAttrs" fields should contain condition data but not both\</li\> \<li\>Logical aggreation(and,or) enum indicates that additional conditions are present under the children field\</li\>\</ul\>.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/children/isNegate"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/children/isnegate:

      .. rst-class:: ansible-option-title

      **isNegate**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/children/isNegate" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Indicates whereas this condition is in negate mode.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/children/link"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/children/link:

      .. rst-class:: ansible-option-title

      **link**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/children/link" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Network Access Global Exception Rules's link.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/children/link/href"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/children/link/href:

      .. rst-class:: ansible-option-title

      **href**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/children/link/href" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Network Access Global Exception Rules's href.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/children/link/rel"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/children/link/rel:

      .. rst-class:: ansible-option-title

      **rel**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/children/link/rel" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Network Access Global Exception Rules's rel.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/children/link/type"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/children/link/type:

      .. rst-class:: ansible-option-title

      **type**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/children/link/type" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Network Access Global Exception Rules's type.


      .. raw:: html

        </div>



  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/conditionType"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/conditiontype:

      .. rst-class:: ansible-option-title

      **conditionType**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/conditionType" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      \<ul\>\<li\>Inidicates whether the record is the condition itself(data) or a logical(or,and) aggregation\</li\> \<li\>Data type enum(reference,single) indicates than "conditonId" OR "ConditionAttrs" fields should contain condition data but not both\</li\> \<li\>Logical aggreation(and,or) enum indicates that additional conditions are present under the children field\</li\>\</ul\>.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/datesRange"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/datesrange:

      .. rst-class:: ansible-option-title

      **datesRange**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/datesRange" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      \<p\>Defines for which date/s TimeAndDate condition will be matched\<br\> Options are - Date range, for specific date, the same date should be used for start/end date \<br\> Default - no specific dates\<br\> In order to reset the dates to have no specific dates Date format - yyyy-mm-dd (MM = month, dd = day, yyyy = year)\</p\>.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/datesRange/endDate"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/datesrange/enddate:

      .. rst-class:: ansible-option-title

      **endDate**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/datesRange/endDate" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Network Access Global Exception Rules's endDate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/datesRange/startDate"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/datesrange/startdate:

      .. rst-class:: ansible-option-title

      **startDate**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/datesRange/startDate" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Network Access Global Exception Rules's startDate.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/datesRangeException"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/datesrangeexception:

      .. rst-class:: ansible-option-title

      **datesRangeException**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/datesRangeException" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      \<p\>Defines for which date/s TimeAndDate condition will be matched\<br\> Options are - Date range, for specific date, the same date should be used for start/end date \<br\> Default - no specific dates\<br\> In order to reset the dates to have no specific dates Date format - yyyy-mm-dd (MM = month, dd = day, yyyy = year)\</p\>.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/datesRangeException/endDate"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/datesrangeexception/enddate:

      .. rst-class:: ansible-option-title

      **endDate**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/datesRangeException/endDate" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Network Access Global Exception Rules's endDate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/datesRangeException/startDate"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/datesrangeexception/startdate:

      .. rst-class:: ansible-option-title

      **startDate**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/datesRangeException/startDate" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Network Access Global Exception Rules's startDate.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/description"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/description:

      .. rst-class:: ansible-option-title

      **description**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/description" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Condition description.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/dictionaryName"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/dictionaryname:

      .. rst-class:: ansible-option-title

      **dictionaryName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/dictionaryName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Dictionary name.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/dictionaryValue"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/dictionaryvalue:

      .. rst-class:: ansible-option-title

      **dictionaryValue**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/dictionaryValue" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Dictionary value.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/hoursRange"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/hoursrange:

      .. rst-class:: ansible-option-title

      **hoursRange**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/hoursRange" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      \<p\>Defines for which hours a TimeAndDate condition will be matched\<br\> Time format - hh mm ( h = hour , mm = minutes ) \<br\> Default - All Day \</p\>.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/hoursRange/endTime"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/hoursrange/endtime:

      .. rst-class:: ansible-option-title

      **endTime**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/hoursRange/endTime" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Network Access Global Exception Rules's endTime.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/hoursRange/startTime"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/hoursrange/starttime:

      .. rst-class:: ansible-option-title

      **startTime**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/hoursRange/startTime" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Network Access Global Exception Rules's startTime.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/hoursRangeException"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/hoursrangeexception:

      .. rst-class:: ansible-option-title

      **hoursRangeException**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/hoursRangeException" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      \<p\>Defines for which hours a TimeAndDate condition will be matched\<br\> Time format - hh mm ( h = hour , mm = minutes ) \<br\> Default - All Day \</p\>.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/hoursRangeException/endTime"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/hoursrangeexception/endtime:

      .. rst-class:: ansible-option-title

      **endTime**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/hoursRangeException/endTime" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Network Access Global Exception Rules's endTime.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/hoursRangeException/startTime"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/hoursrangeexception/starttime:

      .. rst-class:: ansible-option-title

      **startTime**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/hoursRangeException/startTime" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Network Access Global Exception Rules's startTime.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/id"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Network Access Global Exception Rules's id.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/isNegate"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/isnegate:

      .. rst-class:: ansible-option-title

      **isNegate**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/isNegate" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Indicates whereas this condition is in negate mode.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/link"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/link:

      .. rst-class:: ansible-option-title

      **link**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/link" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Network Access Global Exception Rules's link.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/link/href"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/link/href:

      .. rst-class:: ansible-option-title

      **href**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/link/href" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Network Access Global Exception Rules's href.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/link/rel"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/link/rel:

      .. rst-class:: ansible-option-title

      **rel**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/link/rel" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Network Access Global Exception Rules's rel.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/link/type"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/link/type:

      .. rst-class:: ansible-option-title

      **type**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/link/type" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Network Access Global Exception Rules's type.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/name"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/name:

      .. rst-class:: ansible-option-title

      **name**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/name" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Condition name.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/operator"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/operator:

      .. rst-class:: ansible-option-title

      **operator**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/operator" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Equality operator.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/weekDays"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/weekdays:

      .. rst-class:: ansible-option-title

      **weekDays**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/weekDays" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      \<p\>Defines for which days this condition will be matched\<br\> Days format - Arrays of WeekDay enums \<br\> Default - List of All week days\</p\>.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/condition/weekDaysException"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/condition/weekdaysexception:

      .. rst-class:: ansible-option-title

      **weekDaysException**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/condition/weekDaysException" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      \<p\>Defines for which days this condition will NOT be matched\<br\> Days format - Arrays of WeekDay enums \<br\> Default - Not enabled\</p\>.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/default"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/default:

      .. rst-class:: ansible-option-title

      **default**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/default" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Indicates if this rule is the default one.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/hitCounts"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/hitcounts:

      .. rst-class:: ansible-option-title

      **hitCounts**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/hitCounts" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The amount of times the rule was matched.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/id"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The identifier of the rule.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/name"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/name:

      .. rst-class:: ansible-option-title

      **name**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/name" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Rule name, Valid characters are alphanumerics, underscore, hyphen, space, period, parentheses.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/rank"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/rank:

      .. rst-class:: ansible-option-title

      **rank**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/rank" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The rank(priority) in relation to other rules. Lower rank is higher priority.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rule/state"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-rule/state:

      .. rst-class:: ansible-option-title

      **state**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rule/state" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The state that the rule is in. A disabled rule cannot be matched.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-securityGroup"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__parameter-securitygroup:

      .. rst-class:: ansible-option-title

      **securityGroup**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-securityGroup" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Security group used in authorization policies.


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are network\_access\_authorization\_global\_exception\_rules.NetworkAccessAuthorizationGlobalExceptionRules.create\_network\_access\_policy\_set\_global\_exception\_rule, network\_access\_authorization\_global\_exception\_rules.NetworkAccessAuthorizationGlobalExceptionRules.delete\_network\_access\_policy\_set\_global\_exception\_rule\_by\_id, network\_access\_authorization\_global\_exception\_rules.NetworkAccessAuthorizationGlobalExceptionRules.update\_network\_access\_policy\_set\_global\_exception\_rule\_by\_id,
   - Paths used are post /network-access/policy-set/global-exception, delete /network-access/policy-set/global-exception/{id}, put /network-access/policy-set/global-exception/{id},
   - Does not support \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins, but instead the embedded connection manager from Cisco ISE SDK
   - The parameters starting with ise\_ are used by the Cisco ISE Python SDK to establish the connection

.. Seealso

See Also
--------

.. seealso::

   `Cisco ISE documentation for Network Access - Authorization Global Exception Rules <https://developer.cisco.com/docs/identity-services-engine/v1/#!policy-openapi>`_
       Complete reference of the Network Access - Authorization Global Exception Rules API.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Create
      cisco.ise.network_access_global_exception_rules:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        state: present
        link:
          href: string
          rel: string
          type: string
        profile:
        - string
        rule:
          condition:
            attributeName: string
            attributeValue: string
            children:
            - conditionType: string
              isNegate: true
              link:
                href: string
                rel: string
                type: string
            conditionType: string
            datesRange:
              endDate: string
              startDate: string
            datesRangeException:
              endDate: string
              startDate: string
            description: string
            dictionaryName: string
            dictionaryValue: string
            hoursRange:
              endTime: string
              startTime: string
            hoursRangeException:
              endTime: string
              startTime: string
            id: string
            isNegate: true
            link:
              href: string
              rel: string
              type: string
            name: string
            operator: string
            weekDays:
            - string
            weekDaysException:
            - string
          default: true
          hitCounts: 0
          id: string
          name: string
          rank: 0
          state: string
        securityGroup: string

    - name: Update by id
      cisco.ise.network_access_global_exception_rules:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        state: present
        id: string
        link:
          href: string
          rel: string
          type: string
        profile:
        - string
        rule:
          condition:
            attributeName: string
            attributeValue: string
            children:
            - conditionType: string
              isNegate: true
              link:
                href: string
                rel: string
                type: string
            conditionType: string
            datesRange:
              endDate: string
              startDate: string
            datesRangeException:
              endDate: string
              startDate: string
            description: string
            dictionaryName: string
            dictionaryValue: string
            hoursRange:
              endTime: string
              startTime: string
            hoursRangeException:
              endTime: string
              startTime: string
            id: string
            isNegate: true
            link:
              href: string
              rel: string
              type: string
            name: string
            operator: string
            weekDays:
            - string
            weekDaysException:
            - string
          default: true
          hitCounts: 0
          id: string
          name: string
          rank: 0
          state: string
        securityGroup: string

    - name: Delete by id
      cisco.ise.network_access_global_exception_rules:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        state: absent
        id: string





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-ise_response"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__return-ise_response:

      .. rst-class:: ansible-option-title

      **ise_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-ise_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco ISE Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"link": {"href": "string", "rel": "string", "type": "string"}, "profile": ["string"], "rule": {"condition": {"attributeName": "string", "attributeValue": "string", "children": [{"conditionType": "string", "isNegate": true, "link": {"href": "string", "rel": "string", "type": "string"}}], "conditionType": "string", "datesRange": {"endDate": "string", "startDate": "string"}, "datesRangeException": {"endDate": "string", "startDate": "string"}, "description": "string", "dictionaryName": "string", "dictionaryValue": "string", "hoursRange": {"endTime": "string", "startTime": "string"}, "hoursRangeException": {"endTime": "string", "startTime": "string"}, "id": "string", "isNegate": true, "link": {"href": "string", "rel": "string", "type": "string"}, "name": "string", "operator": "string", "weekDays": ["string"], "weekDaysException": ["string"]}, "default": true, "hitCounts": 0, "id": "string", "name": "string", "rank": 0, "state": "string"}, "securityGroup": "string"}`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-ise_update_response"></div>

      .. _ansible_collections.cisco.ise.network_access_global_exception_rules_module__return-ise_update_response:

      .. rst-class:: ansible-option-title

      **ise_update_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-ise_update_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      :ansible-option-versionadded:`added in cisco.ise 1.1.0`


      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco ISE Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"response": {"link": {"href": "string", "rel": "string", "type": "string"}, "profile": ["string"], "rule": {"condition": {"attributeName": "string", "attributeValue": "string", "children": [{"conditionType": "string", "isNegate": true, "link": {"href": "string", "rel": "string", "type": "string"}}], "conditionType": "string", "datesRange": {"endDate": "string", "startDate": "string"}, "datesRangeException": {"endDate": "string", "startDate": "string"}, "description": "string", "dictionaryName": "string", "dictionaryValue": "string", "hoursRange": {"endTime": "string", "startTime": "string"}, "hoursRangeException": {"endTime": "string", "startTime": "string"}, "id": "string", "isNegate": true, "link": {"href": "string", "rel": "string", "type": "string"}, "name": "string", "operator": "string", "weekDays": ["string"], "weekDaysException": ["string"]}, "default": true, "hitCounts": 0, "id": "string", "name": "string", "rank": 0, "state": "string"}, "securityGroup": "string"}, "version": "string"}`


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/CiscoISE/ansible-ise/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/CiscoISE/ansible-ise" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

